# SplitWiser

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  diesel.toml
db/: Cargo.toml
db/src/: db.rs  lib.rs  queries.rs  test.rs  types.rs
db/src/queries/: user_expense_installments.rs  user_expenses.rs  user_incomes.rs  user_payments.rs  user_revenues.rs  users.rs
migrations/2023-04-19-225657_create-user-table/: up.sql
migrations/2023-04-21-221130_create-users-tables/: down.sql  up.sql
proto/: splitwiser.proto
schema/: Cargo.toml
schema/src/: enums.rs  schema.rs
scripts/: test
src/: env.rs  features.rs  grpc.rs  main.rs
src/features/: statement.rs  user.rs
src/grpc/: statement.rs  user.rs
