[package]
name = "splitwiser"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
bigdecimal = { version = "0.3.0", default-features = false }
futures = { version = "0.3.12", features = ["std", "async-await"], default-features = false }
prost = { version = "0.11.0", default-features = false }
thiserror = { version = "1.0.0", default-features = false }
time = { version = "0.3.20", features = ["std"], default-features = false }
tokio = { version = "1.13.0", features = ["rt-multi-thread"], default-features = false  }
tonic = { version = "0.8.0", features = ["codegen", "transport", "prost"], default-features = false }

db = { path = "db" }

[dev-dependencies]
db = { path = "db", features = ["test"] }

[build-dependencies]
tonic-build = { version = "0.8.0", features = ["prost"], default-features = false }
