[package]
name = "db"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "time"], default-features = false }
once_cell = { version = "1.9.0", features = ["std"], default-features = false }
r2d2 = { version = "0.8.9", default-features = false }
time = { version = "0.3.20", features = ["std"], default-features = false }
tokio = { version = "1.12.0", features = ["rt"], default-features = false }

schema = { path = "../schema" }

[features]
test = []
